--- a/index.qmd
+++ b/index.qmd
@@ -8,6 +8,8 @@ author: "Joschka Schwarz"
 
 TEMPLATE FOR AUTOMATED PUBLISHING WORKFLOW
 
+CURRENT TEST: WORKFLOW WITHOU STEP: PUSH
+
 
 This is a template example for lab journaling. Students in the data science courses at the Institute of Entrepreneurship will use this template to learn R for business analytics. Students can replace this text as they wish.
 
