test starter-workflow example

--- a/index.qmd
+++ b/index.qmd
@@ -8,7 +8,7 @@ author: "Joschka Schwarz"
 
 TEMPLATE FOR AUTOMATED PUBLISHING WORKFLOW
 
-CURRENT TEST: peaceiris action
+CURRENT TEST: starter-workflow example
 
 
 This is a template example for lab journaling. Students in the data science courses at the Institute of Entrepreneurship will use this template to learn R for business analytics. Students can replace this text as they wish.
